This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Wrong documentation of RAND_egd function in ssl module
Type: Stage: resolved
Components: Documentation Versions: Python 3.3, Python 3.4
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: docs@python Nosy List: christian.heimes, docs@python, python-dev, vajrasky
Priority: normal Keywords: patch

Created on 2013-08-17 15:15 by vajrasky, last changed 2022-04-11 14:57 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
fix_documentation_on_rand_egd_function.patch vajrasky, 2013-08-17 15:15 review
Messages (5)
msg195482 - (view) Author: Vajrasky Kok (vajrasky) * Date: 2013-08-17 15:15
>>> import ssl
>>> ssl.RAND_egd.__doc__
"RAND_egd(path) -> bytes\n\nQueries the entropy gather daemon (EGD) on the socket named by 'path'.\nReturns number of bytes read.  Raises SSLError if connection to EGD\nfails or if it does provide enough data to seed PRNG."

Compare it to documentation about RAND_egd() function from openssl website (https://www.openssl.org/docs/crypto/RAND_egd.html):

RAND_egd() and RAND_egd_bytes() return the number of bytes read from the daemon on success, and -1 if the connection failed or the daemon did not return enough data to fully seed the PRNG. 

Attached the patch to fix the documentation. I am not sure whether we should put the word "fully" or not.

On the side note:
In line 813 in Modules/_ssl.c (the same file where my patch fixed the documentation about RAND_egd function):

gntype = name-> type;

The space between "->" and "type" irritates my eyes. Maybe we can fix this while we fix the documentation? Anyway, this is not really important. I just want to expose it to public and think this does not deserve a dedicated ticket.
msg195483 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2013-08-17 15:19
New changeset b352a5cb60b6 by Christian Heimes in branch '3.3':
Issue #18768: coding style nitpick. Thanks to Vajrasky Kok
http://hg.python.org/cpython/rev/b352a5cb60b6

New changeset fe444f324756 by Christian Heimes in branch 'default':
Issue #18768: coding style nitpick. Thanks to Vajrasky Kok
http://hg.python.org/cpython/rev/fe444f324756

New changeset a8787a6fa107 by Christian Heimes in branch '2.7':
Issue #18768: coding style nitpick. Thanks to Vajrasky Kok
http://hg.python.org/cpython/rev/a8787a6fa107
msg195484 - (view) Author: Christian Heimes (christian.heimes) * (Python committer) Date: 2013-08-17 15:20
Thanks, I have removed the extra space in gntype = name-> type;
msg195485 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2013-08-17 15:26
New changeset ae91252943bf by Christian Heimes in branch '3.3':
Issue 18768: Correct doc string of RAND_edg(). Patch by Vajrasky Kok.
http://hg.python.org/cpython/rev/ae91252943bf

New changeset 5c091acc799f by Christian Heimes in branch 'default':
Issue 18768: Correct doc string of RAND_edg(). Patch by Vajrasky Kok.
http://hg.python.org/cpython/rev/5c091acc799f

New changeset 31389495cdbf by Christian Heimes in branch '2.7':
Issue 18768: Correct doc string of RAND_edg(). Patch by Vajrasky Kok.
http://hg.python.org/cpython/rev/31389495cdbf
msg195486 - (view) Author: Christian Heimes (christian.heimes) * (Python committer) Date: 2013-08-17 15:27
Thanks :)
History
Date User Action Args
2022-04-11 14:57:49adminsetgithub: 62968
2013-08-17 15:27:17christian.heimessetstatus: open -> closed
resolution: fixed
messages: + msg195486

stage: resolved
2013-08-17 15:26:16python-devsetmessages: + msg195485
2013-08-17 15:20:58christian.heimessetmessages: + msg195484
2013-08-17 15:19:53python-devsetnosy: + python-dev
messages: + msg195483
2013-08-17 15:15:39vajraskycreate