Issue #18768: coding style nitpick. Thanks to Vajrasky Kok